--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script src='./scripts/main.js'></script>
     <script src='./scripts/api.js'></script>
     <script src='./scripts/pokemon.js'></script>
+    <script src='./scripts/type.js'></script>
+    <script src='./scripts/move.js'></script>
+    <script src='./scripts/flavor_text.js'></script>
 
 </head>
 
